--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<!-- Header Toolbar -->
 <app-header></app-header>
-
-<router-outlet></router-outlet>
+<app-navbar></app-navbar>
+<div class="main-content">
+  <router-outlet></router-outlet>
+</div>
