Add dashboard components :

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,4 @@
-<h1>dashboard works!</h1>
+<div class="dashboard">
+  <app-overview></app-overview>
+  <app-expense-list></app-expense-list>
+</div>
