--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,13 +1,13 @@
 <div>
   <h2>Sign In</h2>
-  <form (ngSubmit)="onSubmit()">
+  <form #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)">
     <div>
       <label for="username">Username:</label>
-      <input type="text" id="username" formControlName="username" required>
+      <input type="text" id="username" name="username" ngModel required>
     </div>
     <div>
       <label for="password">Password:</label>
-      <input type="password" id="password" formControlName="password" required>
+      <input type="password" id="password" name="password" ngModel required>
     </div>
     <button type="submit">Login</button>
   </form>
