--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -19,6 +19,11 @@ header {
   align-items: center;
 }
 
+.header-right {
+  display: flex;
+  align-items: center;
+}
+
 #logo {
   height: 80%;
   margin: 1rem;
@@ -36,5 +41,24 @@ h2 {
   padding: 0 2rem;
   font-size: 1.5rem;
   line-height: 1.2;
+}
+
+.dropdown-menu {
+  position: relative;
+}
+
+
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: #fff;
+  padding: 0.5rem;
+}
+
+.dropdown-menu.open .dropdown-content {
+  display: block;
 }
 
