Completed hamburger menu

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,10 +5,13 @@
   </div>
   <div class="header-right">
     <h2>Hi, {{ currentUserFirstName }}!</h2>
-    <div class="dropdown-menu" [class.open]="isDropdownOpen">
+    <div class="dropdown-menu" [class.open]="isDropdownOpen"> 
       <button class="menu-button" (click)="toggleDropdown()">☰</button>
       <div class="dropdown-content">
-        <button class="logout-button" (click)="logout()">Logout</button>
+        <button class="logout-button" (click)="logout()">
+          <img src="assets/signout.svg" alt="Sign out icon" class="icon"> <!-- Add signout icon -->
+          Sign out
+        </button>
       </div>
     </div>
   </div>
