--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -10,18 +10,17 @@ header {
   background-color: #323232;
   color: #efefef;
   font-weight: 600;
+  z-index: 9999;
+}
+
+.header-left, .header-right {
+  display: flex;
+  align-items: center;
 }
 
 .header-left {
   max-height: 100%;
   height: 100%;
-  display: flex;
-  align-items: center;
-}
-
-.header-right {
-  display: flex;
-  align-items: center;
 }
 
 #logo {
@@ -29,36 +28,75 @@ header {
   margin: 1rem;
 }
 
+.icon {
+  width: 1em;
+  height: 1em;
+  margin-right: 0.75em;
+}
+
 h1 {
   margin: 0;
   padding: 0;
-  font-size: 2.5rem;
+  font-size: 2.5em;
   line-height: 1.2;
 }
 
 h2 {
   margin: 0;
   padding: 0 2rem;
-  font-size: 1.5rem;
+  font-size: 1.75em;
   line-height: 1.2;
+}
+
+.menu-button {
+  margin-right: 2rem;
+  background: none;
+  border: none;
+  color: #c3c3c3;
+  font-size: 2rem;
+  cursor: pointer;
 }
 
 .dropdown-menu {
   position: relative;
 }
 
-
-
 .dropdown-content {
-  display: none;
   position: absolute;
-  top: 100%;
+  top: 0;
   right: 0;
-  background-color: #fff;
-  padding: 0.5rem;
+  background-color: #f9f9f9;
+  min-width: 10rem;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 1rem 1.5rem;
+  border-radius: 0.5rem;
+  opacity: 0;
+  margin-top: 4rem;
+  margin-right: 2rem;
+  transform: translateY(-1rem);
+  transform-origin: top center;
+  transition: all 0.3s ease-in-out;
+}
+
+.logout-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.dropdown-content .logout-button {
+  background: none;
+  border: none;
+  color: #333;
+  font-size: 1.2rem;
+  text-align: left;
+  cursor: pointer;
 }
 
 .dropdown-menu.open .dropdown-content {
   display: block;
+  background-color: #dbdbdb;
+  opacity: 1;
+  transform: translateY(1rem);
 }
 
