--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,12 +1,12 @@
 <div>
   <h2>Sign In</h2>
-  <form #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)">
+  <form #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)" autocomplete="off">
     <div>
-      <label for="username">Username:</label>
+      <label for="username">Username: </label>
       <input type="text" id="username" name="username" ngModel required>
     </div>
     <div>
-      <label for="password">Password:</label>
+      <label for="password">Password: </label>
       <input type="password" id="password" name="password" ngModel required>
     </div>
     <button type="submit">Login</button>
