--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,7 @@
       <button class="menu-button" (click)="toggleDropdown()">☰</button>
       <div class="dropdown-content">
         <button class="logout-button" (click)="logout()">
-          <img src="assets/logout.svg" alt="Sign out icon" class="icon"> <!-- Add signout icon -->
+          <img src="assets/logout.svg" alt="Sign out icon" class="icon">
           Sign out
         </button>
       </div>
