--- a/src/app/expense-list/expense-list.component.html
+++ b/src/app/expense-list/expense-list.component.html
@@ -1,1 +1,7 @@
-<p>expense-list works!</p>
+<div class="expense-list">
+  <h2>Recent Expenses</h2>
+  <div *ngFor="let expense of expenses">
+    <app-expense-item [expense]="expense" (delete)="handleDelete(expense.Id)" (edit)="handleEdit($event)"></app-expense-item>
+  </div>
+  <button (click)="handleAdd()">Add Expense</button>
+</div>
