--- a/src/app/expense-list/expense-list.component.css
+++ b/src/app/expense-list/expense-list.component.css
@@ -2,8 +2,10 @@
   margin-top: 1vh;
   margin-right: 2em;
   padding: 2em;
+  width: 32.5vw;
   height: 88vh;
-  background-color: #e6e5e5;
+  background-color: white;
   box-sizing: border-box;
   border-radius: 1em;
+  position: fixed;
 }
