--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -2,13 +2,14 @@
 ul {
   list-style-type: none;
   padding: 0;
-  margin: 0;
-  width: 15vw;
+  margin-top: 1.5vh;
+  margin-left: 0.5vw;
+  width: 14.5vw;
   height: 88vh;
-  background-color: #e6e5e5;
+  background-color: white;
   position: fixed;
   overflow: auto;
-  top: 11vh;
+  top: 9.5vh;
   border-radius: 1em;
 }
 
@@ -19,14 +20,14 @@ li a {
   margin: 0.5em;
   font-size: 1.5em;
   text-decoration: none;
-  background-color: #cfcece;
+  background-color: #e6e5e5;
   border-radius: 0.5em;
   text-align: center;
   transition: background-color 0.1s ease-in-out;
 }
 
 li a:hover {
-  background-color: #c4c3c3;
+  background-color: #d7d7d7;
   transition: background-color 0.2s ease-in-out;
 }
 
