--- a/src/styles.css
+++ b/src/styles.css
@@ -6,4 +6,10 @@ body {
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #e6e5e5;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
 }
