--- a/src/app/expense-item/expense-item.component.css
+++ b/src/app/expense-item/expense-item.component.css
@@ -2,20 +2,69 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid #ddd;
-  padding: 10px 0;
+  padding: 0.5em;
+  background-color: #f0f0f0;
+  border-radius: 1em;
+  margin-bottom: 0.5em;
+  position: relative;
 }
 
-.expense-item .amount {
-  font-size: 1.2em;
+.icon-container {
+  width: 2em;
+  height: 2em;
+  padding: 0.5em;
+}
+
+.category-icon {
+  width: 100%;
+  height: 100%;
+}
+
+.details {
+  display: flex;
+  flex-direction: column;
+  margin-left: 0.5em;
+}
+
+.description {
   font-weight: bold;
 }
 
-.expense-item .category, .expense-item .timestamp {
-  color: #888;
+.amount {
+  margin-left: auto;
+  margin-right: 0.25em;
+  font-size: 1.5em;
+  color: #007bff;
 }
 
-.expense-item .options-button {
+.options-button {
+  display: flex;
+  align-items: center; 
+  justify-content: center; 
+  width: 1.5em; 
+  height: 1.5em; 
+  cursor: pointer;
+}
+
+.options-button img {
+  width: 1em; 
+  height: 1em;
+}
+
+.dropdown-menu {
+  position: absolute;
+  right: 0;
+  top: 80%;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 0.5em;
+  padding: 0.5em;
+  display: flex;
+  flex-direction: column;
+  z-index: 9999;
+}
+
+.dropdown-menu button {
   background: none;
   border: none;
   cursor: pointer;
