--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -65,13 +65,13 @@ h2 {
   position: absolute;
   top: 0;
   right: 0;
-  background-color: #f9f9f9;
+  background-color: #ffffff;
   min-width: 10rem;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   padding: 1rem 1.5rem;
   border-radius: 0.5rem;
   opacity: 0;
-  margin-top: 4rem;
+  margin-top: 6vh;
   margin-right: 2rem;
   transform: translateY(-1rem);
   transform-origin: top center;
@@ -92,7 +92,7 @@ h2 {
 
 .dropdown-menu.open .dropdown-content {
   display: block;
-  background-color: #dbdbdb;
+  background-color: white;
   opacity: 1;
   transform: translateY(1rem);
 }
