--- a/src/app/expense-list/expense-list.component.html
+++ b/src/app/expense-list/expense-list.component.html
@@ -4,29 +4,46 @@
     <app-expense-item [expense]="expense" (delete)="handleDelete(expense.Id)" (edit)="handleEdit($event)"></app-expense-item>
   </div>
   <button (click)="isFormVisible = true">Add Expense</button>
-
+</div>
+<div>
   <div *ngIf="isFormVisible" class="overlay">
     <div class="add-expense-form">
       <h3>Add Expense</h3>
-      <form #expenseForm="ngForm" (ngSubmit)="onSubmit(expenseForm)">
-        <label>
-          Amount:
-          <input type="number" id="amount" name="amount" ngModel required>
-        </label>
-        <label>
-          Date:
-          <input type="date" id="date" name="date" ngModel required>
-        </label>
-        <label>
-          Category:
-          <input type="text" id="category" name="category" ngModel required>
-        </label>
-        <label>
-          Description:
-          <input type="text" id="description" name="description" ngModel required>
-        </label>
-        <button type="submit">Submit</button>
-        <button type="button" (click)="isFormVisible = false">Cancel</button>
+      <form #expenseForm="ngForm" (ngSubmit)="onSubmit(expenseForm)" autocomplete="off">
+        <div class="row">
+          <input type="text" id="description" name="description" ngModel required placeholder="Description of Expense">
+          <select id="category" name="category" ngModel required>
+            <option value="" disabled>Category</option>
+            <option value="Clothing">Clothing</option>
+            <option value="Dining">Dining</option>
+            <option value="Education">Education</option>
+            <option value="Entertainment">Entertainment</option>
+            <option value="Groceries">Groceries</option>
+            <option value="Health">Health</option>
+            <option value="Housing">Housing</option>
+            <option value="Transportation">Transportation</option>
+            <option value="Utilities">Utilities</option>
+            <option value="Miscellaneous">Miscellaneous</option>
+          </select>
+        </div>
+        <div class="row amount-row">
+          <label class="dollar-sign">$</label>
+          <input type="number" id="amount" name="amount" ngModel required min="0" step="0.01" value="0.00">
+        </div>
+        <div class="row">
+          <label id="date-input">
+            Date
+            <input type="date" id="date" name="date" ngModel required>
+          </label>
+          <label id="time-input">
+            Time (optional)
+            <input type="time" id="time" name="time" ngModel>
+          </label>
+        </div>
+        <div class="buttons-row">
+          <button type="button" (click)="isFormVisible = false">Cancel</button>
+          <button type="submit" [disabled]="!expenseForm.valid">Submit</button>
+        </div>
       </form>
     </div>
   </div>
