Added loading bar to expense adding

--- a/src/app/expense-list/expense-list.component.css
+++ b/src/app/expense-list/expense-list.component.css
@@ -148,3 +148,28 @@ button[type=button] {
 input:focus, select:focus {
   outline: none;
 }
+
+.loading-bar-container {
+  height: 0.1em;
+  margin-bottom: 0.6em;
+}
+
+.loading-bar {
+  height: 0.1em;
+  width: 100%;
+  background: linear-gradient(90deg, transparent, transparent, #0066ff, transparent, transparent);
+  background-size: 200% 100%;
+  animation: loading 1s linear infinite;
+}
+
+@keyframes loading {
+  0% {
+    background-position: 100% 0;
+  }
+  50% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 100% 0;
+  }
+}
