--- a/src/app/expense-list/expense-list.component.css
+++ b/src/app/expense-list/expense-list.component.css
@@ -51,6 +51,7 @@
 .add-expense-form {
   background: white;
   padding: 2rem;
+  padding-bottom: 1.5rem;
   border-radius: 1rem;
   z-index: 10;
   display: flex;
