--- a/src/app/bar-chart/bar-chart.component.html
+++ b/src/app/bar-chart/bar-chart.component.html
@@ -1,1 +1,11 @@
-<p>bar-chart works!</p>
+<div class="bar-chart">
+  <!-- TODO: Add dropdown menu for selectors -->
+  <div class="canvas-container">
+    <canvas baseChart
+    [datasets]="barChartData"
+    [labels]="barChartLabels"
+    [options]="barChartOptions"
+    chartType="bar">
+  </canvas>
+</div>
+</div>
