--- a/src/app/bar-chart/bar-chart.component.css
+++ b/src/app/bar-chart/bar-chart.component.css
@@ -8,6 +8,31 @@
   align-items: center;
   border-radius: 1rem;
 }
+
+.form-container {
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  margin-bottom: 1em;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 1em;
+}
+
+.form-container form {
+  display: flex;
+  justify-content: left;
+  width: 100%;
+}
+
+.form-group label {
+  margin-bottom: 0.5em;
+}
+
 .canvas-container {
   display: flex;
   justify-content: center;
