--- a/src/app/bar-chart/bar-chart.component.css
+++ b/src/app/bar-chart/bar-chart.component.css
@@ -1,5 +1,6 @@
 .bar-chart {
   background-color: white;
+  margin: 0;
   width: 58.5vw;
   height: 73vh;
   position: fixed;
@@ -14,7 +15,7 @@
   justify-content: space-between;
   width: 90%;
   margin-top: 1em;
-  margin-bottom: 1em;
+  margin-bottom: 0.5em;
 }
 
 .form-group {
