--- a/src/app/expense-list/expense-list.component.css
+++ b/src/app/expense-list/expense-list.component.css
@@ -25,7 +25,7 @@
 .expenses-container::after {
   content: '';
   position: absolute;
-  bottom: 4em;
+  bottom: 6vh;
   left: 0;
   width: 100%;
   height: 10em;
