--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -13,7 +13,7 @@
       </div>
     </div>
   </div>
-  <div class="row">
+  <div class="bar-chart-container">
     <app-bar-chart></app-bar-chart>
   </div>
 </div>
